# network-idx

./: .gitignore  Notes.md  README.md  pyproject.toml  weightage_methodology.MD
notebooks/: 01_data_fcc_fixed_speeds.ipynb  01_data_fcc_table_fixed_speeds.ipynb  01_processing_census_baf.ipynb  01_processing_fcc_fixed_coverage.ipynb  02_feature_engg_fcc_fixed_coverage_block_ct.ipynb  02_feature_engg_fcc_fixed_coverage_county_res.ipynb  02_feature_engg_fcc_fixed_speeds_ct.ipynb  02_feature_engg_fcc_loc_count_census_addblcount.ipynb  02_processing_fcc_fixed_coverage.ipynb  02_processing_fcc_fixed_speeds.ipynb  03_feature_engg_fcc_fixed_speeds_ct.ipynb  03_visuals_fcc_fixed_coverage_tract.ipynb  03_visuals_fcc_fixed_providers.ipynb  04_eda_binary_thresholds.ipynb  04_eda_classification.ipynb  04_eda_clustering.ipynb  04_eda_correlations.ipynb  04_eda_fcc_feature_engg.ipynb  04_eda_kmeans.ipynb  04_eda_pca.ipynb
src/network_idx/: config.py  constants.py  utils.py
src/network_idx/data/: census_addresscountlisting.py  census_baf.py  fcc_fixed_speeds.py  fcc_fixed_summary.py  fcc_table_fixed_speeds.py
src/network_idx/eda/: correlations.py
src/network_idx/feature_engg/: all_features_tract.sql  all_features_tract_bq.py  demo_population_tract.sql  demo_population_tract_bq.py  fcc_fixed_speeds_tract.py  fcc_fixed_summary_county_residuals.py  fcc_fixed_summary_ct_bucketing.sql  fcc_fixed_summary_ct_bucketing_bq.py  fcc_fixed_summary_est_ct_block.py
src/network_idx/processing/: census_addresscountlisting.py  census_baf.py  fcc_fixed_speeds.py  fcc_fixed_summary.py
src/network_idx/transfer/: fcc_fixed_coverage_features_ct_bq.py  fcc_fixed_speeds_and_providers_bq.py  fcc_fixed_speeds_features_ct_bq.py  fcc_fixed_speeds_features_ct_gcs.py  fcc_fixed_speeds_gcs.py  fcc_fixed_summary_gcs.py
tests/processing/: test_fcc_fixed_speeds.py
