[project]
name = "network-idx"
version = "0.1.0"
description = ""
authors = [
    {name = "Eshan Prashar",email = "eprashar@corelogic.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "gcsfs (>=2026.2.0,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
